Fix download all

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,9 +50,9 @@
 
   {% if script %}
   {% if download_link and simf_link %}
-    <p>
-       <strong><a href="{{ download_link }}" download>Download All</a></strong>
-    </p>
+  <p>
+    <strong><a href="/static/scripts.zip" download>Download All</a></strong>
+  </p>
   {% endif %}
   <p><strong>run_libe.py:</strong> <a href="{{ download_link }}" download>Download</a></p>
 
